--- a/bubbles.html
+++ b/bubbles.html
@@ -31,21 +31,22 @@ function setup() {
 function draw() {
     background(255);
 
-    for (var i = 0; i < bubbles.length; i++) {
+    for (var i = 1; i < bubbles.length; i++) {
         var bubble = bubbles[i];
 
         if (dist(mouseX, mouseY, bubble.x, bubble.y) < bubble.radius) {
             if (mouseIsPressed) {
                 bubbles.splice(i, 1); // remove this bubble!
             }
-            fill(255, 200, 200, 200);
+
+            fill(200, 300, 500, 200);
         } else {
-            fill(255, 220, 200, 200);
+            fill(355, 220, 500, 200);
         }
 
-        ellipse(bubble.x, bubble.y, bubble.radius*2);
-        bubble.x += random(-10, 12);
-        bubble.y += random(-10,12);
+        ellipse(bubble.x, bubble.y, bubble.radius*3);
+        bubble.x += random(-1, 1);
+        bubble.y += random(-1, 1);
     }
 }
 
